[gd_scene load_steps=15 format=3 uid="uid://c31tww2yg02sg"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bcqcf"]
[ext_resource type="Texture2D" uid="uid://cxu5ixys8wuq7" path="res://icon.svg" id="2_0nomn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2b8u"]
size = Vector2(126, 124.75)

[sub_resource type="Animation" id="Animation_xlm8u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_67kba"]
resource_name = "loop"
length = 23.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 18.3667, 22.6667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0nh5i"]
_data = {
"RESET": SubResource("Animation_xlm8u"),
"loop": SubResource("Animation_67kba")
}

[sub_resource type="Animation" id="Animation_3jk25"]
length = 0.001

[sub_resource type="Animation" id="Animation_xagqp"]
resource_name = "Wall_Bounce"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w12jk"]
_data = {
"RESET": SubResource("Animation_3jk25"),
"Wall_Bounce": SubResource("Animation_xagqp")
}

[sub_resource type="Animation" id="Animation_h4y4c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TheGodot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TheGodot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TheGodot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_v4s1v"]
resource_name = "left_press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TheGodot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.266667),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [0.0, -1.309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TheGodot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 0),
"update": 0,
"values": [Color(1, 0.0405029, 0.0223527, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.266667),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [0.0, -1.309, 0.0]
}

[sub_resource type="Animation" id="Animation_3jx7o"]
resource_name = "middle_press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TheGodot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 0),
"update": 0,
"values": [Color(1, 0.0405029, 0.0223527, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TheGodot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6ewtt"]
resource_name = "right_press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TheGodot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.266667),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [0.0, 1.309, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TheGodot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 0),
"update": 0,
"values": [Color(1, 0.0405029, 0.0223527, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.133333, 0.266667),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5),
"update": 0,
"values": [0.0, 1.309, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxwvu"]
_data = {
"RESET": SubResource("Animation_h4y4c"),
"left_press": SubResource("Animation_v4s1v"),
"middle_press": SubResource("Animation_3jx7o"),
"right_press": SubResource("Animation_6ewtt")
}

[node name="TheGodot" type="CharacterBody2D"]
script = ExtResource("1_bcqcf")

[node name="PushBackTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TheGodot" type="Sprite2D" parent="."]
texture = ExtResource("2_0nomn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j2b8u")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 90.0
offset_top = -114.0
offset_right = 322.0
offset_bottom = -91.0
text = "Yes, thats me, I am the Godot."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0nh5i")
}
autoplay = "loop"

[node name="Movement" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w12jk")
}

[node name="ButtonPresser" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nxwvu")
}
